[package]
name = "solana-nft"
version = "0.1.0"
description = "Anchor based NFT"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["metadata"] }
serde = "1.0.0"
